cmake_minimum_required(VERSION 3.0 FATAL_ERROR)
PROJECT(custom_ops)
CMAKE_POLICY(SET CMP0054 NEW)
IF(WIN32)
    SET(target_os_arch windows-x86_64)
ELSE()
    SET(target_os_arch linux-x86_64)
    SET(CMAKE_C_COMPILER /usr/bin/gcc-5)
    SET(CMAKE_CXX_COMPILER /usr/bin/g++-5)
ENDIF()
SET(TARGET_BUILD_TYPE release)
SET(CMAKE_BUILD_TYPE ${TARGET_BUILD_TYPE})
SET(CMAKE_PREFIX_PATH ${CMAKE_CURRENT_SOURCE_DIR}/deps/${target_os_arch}-${TARGET_BUILD_TYPE}/libtorch/share/cmake)

MESSAGE(STATUS "TARGET_OS_ARCH ${target_os_arch}")
MESSAGE(STATUS "TARGET_BUILD_TYPE ${CMAKE_BUILD_TYPE}")
MESSAGE(STATUS "TARGET_OS_ARCH ${target_os_arch}")

FIND_PACKAGE(Torch REQUIRED)
MESSAGE(STATUS "TORCH_LIBRARIES: ${TORCH_LIBRARIES}")
ADD_EXECUTABLE(example-app example-app.cpp)
INCLUDE_DIRECTORIES(include)
TARGET_LINK_LIBRARIES(example-app "${TORCH_LIBRARIES}")
SET_PROPERTY(TARGET example-app PROPERTY CXX_STANDARD 11)